# HyperTwist

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  HyperTwist.sln  LICENSE  README.md  Setup-Ubuntu.sh
.devcontainer/: Dockerfile  build-docker.sh  devcontainer.json
Editor/: CMakeLists.txt  HyperTwist.vcxproj.filters
Editor/data/engine/shaders/: BG.shader  HoldNoteBodyRenderer.shader  TextureAtlas.shader
Editor/data/engine/shaders/frag/: HoldNoteBodyRenderer.frag  NoteRenderer.frag
Editor/data/engine/shaders/vert/: BG.vert  MineRenderer.vert  NoteRenderer.vert  NotesUI.vert  Receptors.vert
Editor/data/noteskins/USWMidare++SM5/: metrics.ini
Editor/src/Editor/: Editor.cpp  Editor.h  ImGuiWidgets.h
Editor/src/Editor/Tools/Profiler/: Profiler.h
Editor/src/Editor/imgui/: imgui_widgets.cpp
Editor/src/Game/UI/DDR/: DancingBot.cpp  Snappers.cpp  Snappers.h
Engine/: CMakeLists.txt  Engine.vcxproj  Engine.vcxproj.filters
Engine/src/: EngineApi.h
Engine/src/Audio/: Audio.cpp  Audio.h  AudioCue.h  AudioInfo.h  AudioMgr.cpp  AudioMgr.h  AudioMixBuffer.cpp  AudioMixBuffer.h
Engine/src/Composition/: Transform.cpp  Transform.h
Engine/src/Composition/Events/: Event.h  EventMgr.h
Engine/src/Drivers/: DriverBase.h
Engine/src/Drivers/Audio/: AudioDriver.cpp  AudioDriver.h  WDMKS_AudioDriver.cpp  WDMKS_AudioDriver.h
Engine/src/Drivers/Audio/WDMKS/: WDMKS_AudioDriver.cpp  WDMKS_AudioDriver.h  WDMKS_Common.cpp  WDMKS_Common.h  WDMKS_Exception.h  WDMKS_Filter.cpp  WDMKS_Filter.h  WDMKS_Pin.cpp  WDMKS_Pin.h  WDMKS_Stream.cpp  WDMKS_Stream.h
Engine/src/Game/: Chart.cpp  Chart.h  GameVariables.cpp  GameVariables.h  GlobalEvents.cpp  GlobalEvents.h  GlobalVariables.cpp  GlobalVariables.h  Grade.h  Note.cpp  Note.h  PauseTimer.cpp  PauseTimer.h  Song.cpp  Song.h  SongInfo.h
Engine/src/Game/UI/DDR/: ChartRenderGroup.cpp  ChartRenderGroup.h  MeasureLines.cpp  MeasureLines.h  Receptors.cpp  Receptors.h
Engine/src/Graphics/: Camera.cpp  Camera.h  Color.h  Font.cpp  Font.h  Framebuffer.cpp  Framebuffer.h  GfxMgr.cpp  GfxMgr.h  IRenderQueue.cpp  IRenderQueue.h  RenderPass.cpp  RenderPass.h  Renderable.cpp  Renderable.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  WindowMgr.cpp  WindowMgr.h
Engine/src/Graphics/Renderables/: FontRenderer.cpp  FontRenderer.h  HoldNoteBodyRenderer.cpp  HoldNoteBodyRenderer.h  IRenderable.cpp  IRenderable.h  LineList.cpp  LineList.h  MineRenderer.cpp  MineRenderer.h  NoteRenderer.cpp  NoteRenderer.h  RenderTarget.cpp  RenderTarget.h  Renderable.cpp  Renderable.h  TextureAtlas.cpp  TextureAtlas.h
Engine/src/Input/: InputAction.h  InputMgr.cpp  InputMgr.h  NoteCue.h
Engine/src/Math/: Easing.h  Easing.inl  MathUtils.cpp  MathUtils.h
Engine/src/Misc/: ColorConsole.cpp  ColorConsole.h  Concepts.h  DataTypes.h  Ensure.h  Requires.h  Serialization.h  Timer.cpp  Timer.h
Engine/src/Resources/: Resource.h  ResourceImporter.h  ResourceLoadException.h  ResourceMgr.cpp  ResourceMgr.h
Engine/src/Utils/: Config.h  FileUtils.cpp  FileUtils.h  GameUtils.cpp  GameUtils.h  GfxUtils.cpp  GfxUtils.h  InputUtils.cpp  InputUtils.h  RNG.cpp  StringUtils.h
Game/: CMakeLists.txt  Game.vcxproj  Game.vcxproj.filters
Game/data/UI/: DifficultySelect.json  GameplayP1.json  GameplayP2.json  SongSelect.json  Template.json
Game/data/engine/audio/: Credits.txt
Game/data/engine/shaders/: ChartRenderablesPass.shader  Error.shader  FontRenderer.shader  Line.shader  NotesUI.shader  Quad.shader  Receptors.shader
Game/data/engine/shaders/frag/: Error.frag  FontRenderer.frag  Line.frag  Quad.frag
Game/data/engine/shaders/vert/: ChartRenderablesPass.vert  FontRenderer.vert  HoldNoteBodyRenderer.vert  Line.vert  MineRenderer.vert  NoteRenderer.vert  NotesUI.vert  Quad.vert  Receptors.vert  TextureAtlas.vert
Game/data/engine/texture/Grades/: Reference.txt
Game/data/shaders/: AccountSelectBG.shader  IntroScreenBG.shader
Game/data/shaders/frag/: AccountSelectBG.frag
Game/data/shaders/vert/: BG.vert  Default.vert
Game/src/: main.cpp
Game/src/Game/: Account.cpp  Account.h  GameVariables.cpp  GameVariables.h
Game/src/Game/Phases/: Phase.h  PhaseManager.cpp  PhaseManager.h
Game/src/Game/Phases/AccountSelect/: AccountSelectPhase.cpp  AccountSelectPhase.h  AccountWindow.cpp  AccountWindow.h
Game/src/Game/Phases/DevMenu/: DevMenuActionLeaves.cpp  DevMenuActionLeaves.h  DevMenuItem.h  DevMenuNodes.cpp  DevMenuNodes.h  DevMenuPhase.cpp  DevMenuPhase.h
Game/src/Game/Phases/GameEnd/: GameEndPhase.cpp  GameEndPhase.h
Game/src/Game/Phases/GameModeSelect/: GameModeSelectPhase.cpp  GameModeSelectPhase.h
Game/src/Game/Phases/GameResults/: GameResultsPhase.cpp  GameResultsPhase.h
Game/src/Game/Phases/Gameplay/: GameplayPhase.cpp  GameplayPhase.h
Game/src/Game/Phases/Gameplay/Graphics/: GameplayRenderQueue.cpp  GameplayRenderQueue.h  PlayerGameplayUI.cpp  PlayerGameplayUI.h
Game/src/Game/Phases/IntroScreen/: IntroScreenPhase.cpp  IntroScreenPhase.h
Game/src/Game/Phases/SongResults/: SongResultsPhase.cpp  SongResultsPhase.h
Game/src/Game/Phases/SongSelect/: DifficultySelectRenderables.cpp  DifficultySelectRenderables.h  SongListDisplayManager.cpp  SongListDisplayManager.h  SongSelectChartRenderables.cpp  SongSelectChartRenderables.h  SongSelectCommonRenderables.cpp  SongSelectCommonRenderables.h  SongSelectFilters.cpp  SongSelectFilters.h  SongSelectGroup.cpp  SongSelectGroup.h  SongSelectGroups.cpp  SongSelectGroups.h  SongSelectPhase.cpp  SongSelectPhase.h  SongSelectRenderables.cpp  SongSelectRenderables.h
Game/src/UI/: UIElementData.h  UITable.cpp  UITable.h  UITableException.h
HyperTwist/: CopyDataFolder.bat  HyperTwist.vcxproj  HyperTwist.vcxproj.filters  imgui.ini
HyperTwist/data/shaders/: Default.shader
HyperTwist/src/: main.cpp
HyperTwist/src/Audio/: Audio.cpp  Audio.h  AudioMgr.cpp  AudioMgr.h
HyperTwist/src/Composition/: Transform.cpp  Transform.h
HyperTwist/src/Editor/: Editor.cpp  Editor.h  (+2 more)
enc_temp_folder/14d04e8ef47776898ff176ae6411ba6b/: DifficultySelect.json
include/Stepmania/: CircularBuffer.h
(+52 files in other folders)
